[gd_scene load_steps=11 format=3 uid="uid://ctojvjycd40p0"]

[ext_resource type="Script" path="res://Assets/Prefabs/puzzle_lamp.gd" id="1_e2rbp"]
[ext_resource type="Texture2D" uid="uid://c2nqwhnv5qlpw" path="res://Assets/Sprites/Whale Fall Environment/Light Collectable.png" id="2_ryyen"]
[ext_resource type="Texture2D" uid="uid://dmvqsnul5jk6h" path="res://Assets/Sprites/Whale Fall Environment/Light Collectable Finished.png" id="3_fuqy6"]
[ext_resource type="Texture2D" uid="uid://dbys2lepmmcfe" path="res://Assets/Scenes/E Interact Prompt.png" id="4_3b3ps"]

[sub_resource type="Animation" id="Animation_hxkmg"]
resource_name = "Collect"
length = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.366667, 0.4, 0.433333, 0.466667, 0.5, 0.533333, 0.566667, 0.6, 0.633333, 0.666667, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0), Vector2i(6, 0), Vector2i(7, 0), Vector2i(8, 0), Vector2i(9, 0), Vector2i(7, 0), Vector2i(8, 0), Vector2i(9, 0), Vector2i(7, 0), Vector2i(8, 0), Vector2i(9, 0), Vector2i(7, 0), Vector2i(8, 0), Vector2i(9, 0), Vector2i(7, 0), Vector2i(8, 0), Vector2i(9, 0)]
}

[sub_resource type="Animation" id="Animation_lw02j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yhcdt"]
_data = {
"Collect": SubResource("Animation_hxkmg"),
"RESET": SubResource("Animation_lw02j")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c1h2m"]
size = Vector2(94, 111)

[sub_resource type="Gradient" id="Gradient_se6w1"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_kroet"]
gradient = SubResource("Gradient_se6w1")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="Area2D" type="Area2D"]
collision_layer = 524288
collision_mask = 524288
script = ExtResource("1_e2rbp")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(11, 19)
scale = Vector2(4, 4)
texture = ExtResource("2_ryyen")
hframes = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_yhcdt")
}
speed_scale = 0.2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 26.5)
shape = SubResource("RectangleShape2D_c1h2m")

[node name="LightCollectableFinished" type="Sprite2D" parent="."]
z_index = -5
position = Vector2(11, 19)
scale = Vector2(4, 4)
texture = ExtResource("3_fuqy6")

[node name="E" type="Sprite2D" parent="."]
visible = false
visibility_layer = 16385
z_index = 100
position = Vector2(-1, -76)
scale = Vector2(4, 4)
texture = ExtResource("4_3b3ps")

[node name="BulbLight" type="PointLight2D" parent="."]
light_mask = 128
visibility_layer = 128
y_sort_enabled = true
position = Vector2(32, 16)
color = Color(0.101961, 1, 1, 1)
blend_mode = 2
shadow_enabled = true
texture = SubResource("GradientTexture2D_kroet")
texture_scale = 3.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="animation_finished" from="Sprite2D/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
